--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start-dev" : "NODE_ENV=development node app.js",
+    "start-dev": "NODE_ENV=development node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/hapi": "^21.3.1",
     "moment": "^2.29.4"
   }
 }
