--- a/package.json
+++ b/package.json
@@ -5,12 +5,21 @@
   "main": "index.js",
   "scripts": {
     "start-dev": "NODE_ENV=development node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon basicREST/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ./basicRest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^21.3.1",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "nanoid": "^3.3.4"
+  },
+  "devDependencies": {
+    "eslint": "^8.37.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "nodemon": "^2.0.22"
   }
 }
