--- a/BookshAPI/package.json
+++ b/BookshAPI/package.json
@@ -5,14 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "hapi": "^18.1.0",
+    "@hapi/hapi": "^21.3.1",
     "moment": "^2.29.4",
     "nanoid": "^3.0.0"
   },
